getting list of product details in wish list

--- a/application/views/scripts/wishlist/index.phtml
+++ b/application/views/scripts/wishlist/index.phtml
@@ -2,6 +2,8 @@
 <div id="view-content">
 	<?php
         var_dump($this->user_wishlist);
+        echo "<br><hr>";
+        var_dump($this->prodcut_array);
 //        foreach ($this->user_wishlist as $key => $value) {
 //        echo $key ."  ".$value."<br>";
 
