--- a/application/views/scripts/wishlist/index.phtml
+++ b/application/views/scripts/wishlist/index.phtml
@@ -1,12 +1,14 @@
 <br /><br />
 <div id="view-content">
-	<?php
-        var_dump($this->user_wishlist);
+    <?php
+    var_dump($this->user_wishlist);
+    echo "<br><hr>";
+    foreach ($this->prodcut_array as $key => $value) {
+//            var_dump($value[0]);
+        foreach ($value[0] as $prod_key => $prod_value) {
+            print_r($prod_key.":".$prod_value."\t");
+        }
         echo "<br><hr>";
-        var_dump($this->prodcut_array);
-//        foreach ($this->user_wishlist as $key => $value) {
-//        echo $key ."  ".$value."<br>";
-
-//        }
-?>
+    };
+    ?>
 </div>
