--- a/application/views/scripts/wishlist/index.phtml
+++ b/application/views/scripts/wishlist/index.phtml
@@ -8,7 +8,10 @@
         foreach ($value[0] as $prod_key => $prod_value) {
             print_r($prod_key.":".$prod_value."\t");
         }
+        $pid=$value[0]['productID'];
+        echo "<a href=/wishlist/delete-item/pid/$pid>Remove</a>";
         echo "<br><hr>";
     };
     ?>
+    <a href="/wishlist/add-to-wish">Add</a>
 </div>
