--- a/application/views/scripts/wishlist/zindex.phtml
+++ b/application/views/scripts/wishlist/zindex.phtml
@@ -1,8 +1,8 @@
 <br /><br />
 <div id="view-content">
     <?php
-    var_dump($this->user_wishlist);
-    echo "<br><hr>";
+//    var_dump($this->user_wishlist);
+//    echo "<br><hr>";
     foreach ($this->prodcut_array as $key => $value) {
 //            var_dump($value[0]);
         foreach ($value[0] as $prod_key => $prod_value) {
