--- a/application/views/scripts/admin/index.phtml
+++ b/application/views/scripts/admin/index.phtml
@@ -22,11 +22,11 @@ foreach($cat->listCat() as $key => $value)
 {
 echo "<tr>".
 "<td>" . $value['categoryID']. "</td>" .
-"<td>" . $value['EnName'] . "</td>" .
-"<td>" . $value['ArName'] . "</td>" .
-"<td  > <a class='btn btn-danger' href='admin/delete-category/cid/".$value['categoryID']."'> Delete </a> </td>"
+"<td>" . $value['cat_EnName'] . "</td>" .
+"<td>" . $value['cat_ArName'] . "</td>" .
+"<td  > <a class='btn btn-danger' href='/admin/delete-category/cid/".$value['categoryID']."'> Delete </a> </td>"
  .
-"<td  > <a class='btn btn-success' href='admin/edit-category/cid/".$value['categoryID']."'> Edit </a> </td>"
+"<td  > <a class='btn btn-success' href='/admin/edit-category/cid/".$value['categoryID']."'> Edit </a> </td>"
 .
 
 "</tr>";
@@ -58,7 +58,10 @@ foreach($cat->listCoupon() as $key => $value)
 echo "<tr>".
 "<td>" . $value['couponID']. "</td>" .
 "<td>" . $value['name'] . "</td>" .
-"<td>" . $value['percent'] . "</td>" ."</tr>";
+"<td>" . $value['percent'] . "</td>" .
+
+"<td><a class='btn btn-warning' href="."admin/send-coupon/id/".$value['couponID'].">Send Coupon</a></td>"
+."</tr>";
 
 }
 
@@ -67,8 +70,50 @@ echo "<tr>".
 <p><a class='btn btn-warning' href="<?php echo $this->url(array('controller'=>'admin',
 'action'=>'create-coupon'));?>">Create Coupon</a></p>
 
-<p><a class='btn btn-warning' href="<?php echo $this->url(array('controller'=>'admin',
-'action'=>'send-coupon'));?>">Send Coupon</a></p>
+<!-- <p><a class='btn btn-warning' href="<?php echo $this->url(array('controller'=>'admin',
+'action'=>'send-coupon'));?>">Send Coupon</a></p> -->
+
+
+
+
+
+<hr>
+
+<table class="table">
+<tr>
+ <th>ID</th>
+  <th>En Name</th>  <th>Ar Name</th><th>Email</th > <th>block </th></tr>
+
+
+<?php
+$cat = new Application_Model_Customer();
+
+foreach($cat->listCustomers() as $key => $value)
+{
+echo "<tr>".
+"<td>" . $value['customerID']. "</td>" .
+"<td>" . $value['EnName'] . "</td>" .
+"<td>" . $value['ArName'] . "</td>" .
+"<td>" . $value['email'] . "</td>" ;
+if($value['status'] ==='unblocked'){
+
+echo "<td  > <a class='btn btn-danger' href='/admin/block/id/".$value['customerID']."'> block </a> </td>";
+
+
+}
+else
+{
+echo "<td  > <a class='btn btn-primary' href='/admin/block/id/".$value['customerID']."'> unblock </a> </td>";	
+}
+
+echo"</tr>";
+
+}
+
+?>
+
+</table> 
+
 </div>
 </div>
 </div>
