--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -132,13 +132,13 @@ if(isset($_POST['star'])){
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="<?=$this->baseUrl('images/img1.gif')?>"alt="...">
+      <img src="/img/product1"alt="/Index/product/pid/1">
       <div class="carousel-caption">
         ...
       </div>
     </div>
     <div class="item">
-      <img src="/images/dress.jpg" alt="...">
+      <img src="/img/product2" alt="/Index/product/pid/2">
       <div class="carousel-caption">
         ...
       </div>
