--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -46,9 +46,9 @@ $personKey=key($person);
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav">
 
-  <li><a href="/Index/index"> Home </a></li>
-  <li><a href=""> any thing</a></li>
-  <li><a href=""> About </a></li>
+  <li><a href="index.php"> Home </a></li>
+  <li><a href="#"> any thing</a></li>
+  <li><a href="#"> About </a></li>
 
   <?php if(empty($userData)){ ?>
 
