--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -79,8 +79,8 @@ $userData=$storage->read();
   <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">language <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="#">En</a></li>
-          <li><a href="#">Ar</a></li>
+          <li><a href="?ln=En">En</a></li>
+          <li><a href="?ln=Ar">Ar</a></li>
         </ul>
       </li>
     </ul>
