--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -43,14 +43,14 @@ $categories = new Zend_Session_Namespace('category');
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href='index.php'> Amazend </a>
+    <a class="navbar-brand" href="/index"> Amazend </a>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav">
 
-  <li><a href="/index.php"> Home </a></li>
+  <li><a href="/index"> Home </a></li>
   <li><a href="#"> any thing</a></li>
   <li><a href="#"> About </a></li>
 
@@ -391,9 +391,9 @@ _________________________________________________________ -->
 
         <div class="collapse clearfix" id="search">
 
-            <form class="navbar-form" role="search">
+            <form class="navbar-form" role="search" action="/index/search" method="GET" >
                 <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search">
+                    <input type="text" class="form-control" placeholder="Search" name="name">
                     <span class="input-group-btn">
 
   <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button>
@@ -409,6 +409,7 @@ _________________________________________________________ -->
     <!-- /.container -->
 </div>
 <!-- /#navbar -->
+
 
 <!-- *** NAVBAR END *** -->
 <?php echo $this->layout()->content; ?>
