--- a/application/views/scripts/index/category.phtml
+++ b/application/views/scripts/index/category.phtml
@@ -1,5 +1,5 @@
 <br /><br />
 <div id="view-content">
-	mai
-	<?php  print_r($this->cat_details); ?>
+	<!-- mai
+ -->	<?php  print_r($this->cat_details); ?>
 </div>
