--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -154,8 +154,8 @@ _________________________________________________________ -->
         <div class="navbar-header">
 
             <a class="navbar-brand home" href="/index" data-animate-hover="bounce">
-                <img src="img/logo.png" alt="Obaju logo" class="hidden-xs">
-                <img src="img/logo-small.png" alt="Obaju logo" class="visible-xs"><span class="sr-only">Obaju - go to homepage</span>
+                <img src="/img/logo.png" alt="Obaju logo" class="hidden-xs">
+                <img src="/img/logo-small.png" alt="Obaju logo" class="visible-xs"><span class="sr-only">Obaju - go to homepage</span>
             </a>
             <div class="navbar-buttons">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation">
@@ -276,12 +276,12 @@ _________________________________________________________ -->
                                     <div class="col-sm-3">
                                         <div class="banner">
                                             <a href="#">
-                                                <img src="img/banner.jpg" class="img img-responsive" alt="">
+                                                <img src="/img/banner.jpg" class="/img img-responsive" alt="">
                                             </a>
                                         </div>
                                         <div class="banner">
                                             <a href="#">
-                                                <img src="img/banner2.jpg" class="img img-responsive" alt="">
+                                                <img src="/img/banner2.jpg" class="/img img-responsive" alt="">
                                             </a>
                                         </div>
                                     </div>
