top perchased product in the category

--- a/application/views/scripts/index/product.phtml
+++ b/application/views/scripts/index/product.phtml
@@ -348,18 +348,17 @@ $personKey = "adminID";
                           <!-- hager -->
         <table class="table">
             <tr>
-             <th>Product Name</th>  <th>number of users who purchased</th> 
+             <th>number of users who purchased</th> 
              <th>The amount of money gained </th>
             </tr>
             <?php
            // $pro = new Application_Model_Product();
-          
             echo "<tr>".
-            "<td>" . $this->product["EnName"] . "</td>" .
             "<td>" . $this->product['no_purchase'] . "</td>" .
             "<td>" . $this->product['no_purchase']*$this->product['price'] . "</td>" ."</tr>";
             
             ?>
+            
             </table>
                          
 
