--- a/application/views/scripts/index/category.phtml
+++ b/application/views/scripts/index/category.phtml
@@ -1,5 +1,9 @@
 <br /><br />
 <div id="view-content">
-	<!-- mai
- -->	<?php  print_r($this->cat_details); ?>
+
+	<?php  print_r($this->cat_top) ; ?>
+
+
+ 	<?php  print_r($this->cat_details); ?>
+
 </div>
