--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -261,7 +261,7 @@ _________________________________________________________ -->
                     </li>
                 <?php else: ?>
 
-                    <li><a href="/Customer/logout">Logout</a></li>
+                    <li><a href="/customer/logout">Logout</a></li>
                 <?php endif; ?>
                     <!-- Language -->
                   <li class="dropdown">
