add to cart and retriev products for specific category

--- a/application/views/scripts/customer/addcart.phtml
+++ b/application/views/scripts/customer/addcart.phtml
@@ -1,4 +1,8 @@
 <br /><br />
 <div id="view-content">
 	<p>View script for controller <b>Customer</b> and script/action name <b>addcart</b></p>
+	<?php
+print_r($this->cart) ;
+echo "mai";
+	 ?>
 </div>
